[package]
name = "crates-vendor"
version = "0.1.0"
authors = ["David McNeil <mcneil.david2@gmail.com>"]

[dependencies]
# cbindgen = "0.6.0"
actix-protobuf = "0.2.0"
actix-web = "0.6.14"
adler32 = "1.0.3"
aho-corasick = "0.6.5"
ansi_term = "0.11.0"
arrayvec = "0.4.7"
atty = "0.2.10"
avro-rs = "0.4.1"
backtrace = "0.3.9"
backtrace-sys = "0.1.23"
base64 = "0.9.2"
bincode = "1.0.1"
bit-set = "0.5.0"
bit-vec = "0.5.0"
bitflags = "1.0.3"
bson = "0.12.1"
build_const = "0.2.1"
byteorder = "1.2.3"
bytes = "0.4.8"
cargo-web = "0.6.13"
cc = "1.0.17"
cfg-if = "0.1.4"
chrono = "0.4.4"
clap = "2.32.0"
cloudabi = "0.0.3"
color_quant = "1.0.1"
config = "0.9.0"
cookie = "0.10.1"
cpython = "0.2.0"
crc = "1.8.1"
crossbeam = "0.3.2"
crossbeam-deque = "0.5.1"
crossbeam-epoch = "0.5.0"
crossbeam-utils = "0.4.1"
csv = "1.0.0"
csv-core = "0.1.4"
cursive = "0.8.2"
data-encoding = "2.1.1"
debug_unreachable = "0.1.1"
deflate = "0.7.18"
diesel = "1.3.2"
docker = "0.0.41"
docopt = "1.0.0"
dotenv = "0.13.0"
dotenv_codegen = "0.11.0"
dotenv_codegen_impl = "0.1.0"
dotenv_macros = "0.10.0"
dtoa = "0.4.3"
either = "1.5.0"
elastic_reqwest = "0.20.10"
encoding_rs = "0.8.4"
env_logger = "0.5.10"
envy = "0.3.2"
error-chain = "0.12.0"
etcd = "0.8.0"
extprim = "1.6.0"
failure = "0.1.1"
failure_derive = "0.1.1"
faster = "0.4.3"
fern = "0.5.6"
filetime = "0.2.1"
fixedbitset = "0.1.9"
flate2 = "1.0.1"
fnv = "1.0.6"
foreign-types = "0.3.2"
foreign-types-shared = "0.1.1"
fs_extra = "1.1.0"
ftp = "3.0.1"
fuchsia-zircon = "0.3.3"
fuchsia-zircon-sys = "0.3.3"
futf = "0.1.4"
futures = "0.1.22"
futures-cpupool = "0.1.8"
futures-preview = "0.3.0-alpha.1"
gcc = "0.3.54"
geo = "0.9.1"
getopts = "0.2.18"
gif = "0.10.0"
glob = "0.2.11"
grpc = "0.5.0"
gtk = "0.4.1"
h2 = "0.1.10"
handlebars = "1.0.0"
html5ever = "0.22.3"
http = "0.1.7"
httparse = "1.3.2"
human-panic = "1.0.0"
humantime = "1.1.1"
hyper = "0.12.5"
hyper-tls = "0.3.0"
idna = "0.1.5"
image = "0.19.0"
indexmap = "1.0.1"
indicatif = "0.9.0"
inflate = "0.4.3"
influent = "0.4.1"
iovec = "0.1.2"
itertools = "0.7.8"
itoa = "0.4.2"
jpeg-decoder = "0.1.15"
kernel32-sys = "0.2.2"
language-tags = "0.2.2"
lazy_static = "1.0.1"
lazycell = "1.0.0"
lettre = "0.8.2"
libc = "0.2.42"
libflate = "0.1.16"
libz-sys = "1.0.18"
log = "0.4.3"
log4rs = "0.8.0"
lzw = "0.10.0"
mac = "0.1.1"
markup5ever = "0.7.2"
matches = "0.1.6"
maud = "0.17.5"
memchr = "2.0.1"
memmap = "0.6.2"
memoffset = "0.2.1"
mime = "0.3.8"
mime_guess = "2.0.0-alpha.5"
miniz-sys = "0.1.10"
mio = "0.6.15"
mioco = "0.8.1"
miow = "0.3.1"
mongo_driver = "0.12.1"
mongodb = "0.3.9"
multi_log = "0.1.2"
native-tls = "0.2.0"
ncurses = "5.93.0"
ndarray = "0.11.2"
net2 = "0.2.33"
new_debug_unreachable = "1.0.1"
nix = "0.11.0"
nodrop = "0.1.12"
nom = "4.0.0"
num = "0.2.0"
num_cpus = "1.8.0"
num-bigint = "0.2.0"
num-complex = "0.2.0"
num-derive = "0.2.2"
num-integer = "0.1.39"
num-iter = "0.1.37"
num-rational = "0.2.1"
num-traits = "0.2.5"
ordermap = "0.4.1"
pbr = "1.0.1"
percent-encoding = "1.0.1"
petgraph = "0.4.12"
phf = "0.7.21"
phf_codegen = "0.7.21"
phf_generator = "0.7.21"
phf_shared = "0.7.21"
pkg-config = "0.3.11"
png = "0.12.0"
postgres = "0.15.2"
precomputed-hash = "0.1.1"
priority-queue = "0.5.1"
proc-macro2 = "0.4.6"
prost = "0.4.0"
prost-derive = "0.4.0"
prost-types = "0.4.0"
protobuf = "2.0.2"
protobuf-codegen = "2.0.3"
protobuf-codegen-pure = "2.0.3"
protoc = "2.0.2"
pyo3 = "0.2.7"
qt_gui = "0.2.3"
quick-error = "1.2.2"
quick-xml = "0.12.1"
quicli = "0.3.0"
quote = "0.6.3"
raft = "0.3.0"
rain_core = "0.3.0"
rain_server = "0.3.0"
rain_task = "0.3.0"
rand = "0.5.3"
rand_core = "0.2.1"
rayon = "1.0.1"
rayon-core = "1.4.0"
redis = "0.8.0"
regex = "1.0.1"
regex-syntax = "0.6.1"
relay = "0.1.1"
relm = "0.14.6"
remove_dir_all = "0.5.1"
reqwest = "0.8.6"
rexpect = "0.3.0"
ring = "0.13.0-alpha5"
rmp = "0.8.7"
rmp-serde = "0.13.7"
rmp-serialize = "0.8.0"
rmpv = "0.4.0"
rocket = "0.3.14"
rocket_codegen = "0.3.14"
rocket_contrib = "0.3.14"
ron = "0.3.0"
rouille = "2.1.0"
rpds = "0.5.0"
rs-es = "0.10.1"
rustc_version = "0.2.2"
rustc-demangle = "0.1.8"
rustc-serialize = "0.3.24"
rustlearn = "0.4.3"
rusty-machine = "0.5.4"
rustyline = "1.0.0"
safemem = "0.3.0"
same-file = "1.0.2"
schannel = "0.1.13"
scoped_threadpool = "0.1.9"
scoped-tls = "0.1.2"
scopeguard = "0.3.3"
select = "0.4.2"
semver = "0.9.0"
semver-parser = "0.9.0"
serde = "1.0.70"
serde_cbor = "0.8.2"
serde_derive = "1.0.70"
serde_derive_internals = "0.23.1"
serde_json = "1.0.22"
serde_urlencoded = "0.5.2"
serde_yaml = "0.7.5"
serde-pickle = "0.4.1"
serde-redis = "0.7.2"
serde-xml-rs = "0.2.1"
simple_logger = "0.5.0"
siphasher = "0.2.2"
slab = "0.4.0"
slog = "2.2.3"
slotmap = "0.2.0"
smallvec = "0.6.2"
spinners = "1.0.0"
ssh2 = "0.3"
stdweb = "0.4.7"
stdweb-derive = "0.4.0"
stomp = "0.11.0"
string = "0.1.0"
string_cache = "0.7.3"
string_cache_codegen = "0.4.1"
string_cache_shared = "0.3.0"
strsim = "0.7.0"
structopt = "0.2.10"
strum = "0.10.0"
syn = "0.14.2"
synom = "0.11.3"
syntex_errors = "0.59.1"
syntex_pos = "0.59.1"
syntex_syntax = "0.59.1"
syslog = "4.0.0"
take = "0.1.0"
tar = "0.4.16"
tempdir = "0.3.7"
tempfile = "3.0.2"
tendril = "0.4.0"
tensorflow = "0.9.0"
term = "0.5.1"
term-painter = "0.2.4"
termcolor = "0.3.6"
terminal_cli = "0.2.0"
termion = "1.5.1"
textwrap = "0.10.0"
thread_local = "0.3.5"
thread-id = "3.3.0"
threadpool = "1.7.1"
time = "0.1.40"
tokio = "0.1.7"
tokio-codec = "0.1.0"
tokio-core = "0.1.17"
tokio-executor = "0.1.2"
tokio-fs = "0.1.1"
tokio-io = "0.1.7"
tokio-proto = "0.1.1"
tokio-reactor = "0.1.2"
tokio-service = "0.1.0"
tokio-tcp = "0.1.0"
tokio-threadpool = "0.1.5"
tokio-timer = "0.2.4"
tokio-tls = "0.1.4"
tokio-udp = "0.1.1"
toml = "0.4.6"
traitobject = "0.1.0"
try-lock = "0.2.2"
typeable = "0.1.2"
ucd-util = "0.1.1"
unicase = "2.1.0"
unicode-bidi = "0.3.4"
unicode-normalization = "0.1.7"
unicode-segmentation = "1.2.1"
unicode-width = "0.1.5"
unicode-xid = "0.1.0"
unix_socket = "0.5.0"
unreachable = "1.0.0"
untrusted = "0.6.2"
url = "1.7.0"
utf-8 = "0.7.2"
utf8-ranges = "1.0.0"
uuid = "0.6.5"
vcpkg = "0.2.4"
vec_map = "0.8.1"
version_check = "0.1.4"
void = "1.0.2"
walkdir = "2.1.4"
want = "0.0.6"
wasm-bindgen = "0.2.11"
wasm-pack = "0.4.0"
winapi = "0.3.5"
winapi-build = "0.1.1"
winapi-i686-pc-windows-gnu = "0.4.0"
winapi-x86_64-pc-windows-gnu = "0.4.0"
wincolor = "0.1.6"
wkhtmltopdf = "0.3.0"
ws2_32-sys = "0.2.1"
xattr = "0.2.2"
xml-rs = "0.8.0"
yew = "0.4.0"
